--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                     <div class="sect5TopEventsPlace">500th W Harper Rd</div>
                 </div>
                 <div class="smallScreenSect5TopEventsInfo">
-                    <div class="plusEventInfoSect5" onclick="smallEventDiscriptionClick(event)"><div class="plusSignSect5"></div>Event Info <span style="position: relative; top: -2px; margin-left: 10px; font-weight: 500; font-size: 17px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(7, 119, 211);"> v</span><div class="eventInfoSect5Line"></div></div>
+                    <div class="plusEventInfoSect5" onclick="smallEventDiscriptionClick(event)"><div class="plusSignSect5"></div>Event Info <span style="position: relative; top: -2px; margin-left: 10px; font-weight: 500; font-size: 17px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(7, 119, 211); pointer-events: none;"> v</span><div class="eventInfoSect5Line"></div></div>
                     <div class="smallScreenSect5TopEventsInfoText">Find all sorts of items, both second hand and brand new</div>
                 </div>
             </div>
