--- a/Info.html
+++ b/Info.html
@@ -21,7 +21,7 @@
                     <div onmouseenter="navHoverOn(this)" onmouseleave="navHoverOff()"><a href="events.html">Events</a></div>
                     <div id="currentlyOn" ><a href="Info.html">Info</a></div>
                     <div onmouseenter="navHoverOn(this)" onmouseleave="navHoverOff()"><a href="https://www.paypal.com/pools/c/92IuVe91uZ" target="_blank">Donate</a></div>
-                    <div onmouseenter="navHoverOn(this)" onmouseleave="navHoverOff()"><a href="gala.html">Register For Gala</a></div>
+                    <div onmouseenter="navHoverOn(this)" onmouseleave="navHoverOff()"><a href="gala.html">Gala</a></div>
                 </div>
             </div>
             <div id="smallNav">
@@ -326,6 +326,7 @@
             </div>
             <div id="privacyPolicy"><a href="https://www.privacy-policy-template.com/live.php?token=Mdt6Ss2JCzKFmPioBefR30JBwCVCEpJD">Privacy Policy</a></div>
             <div id="termsOfUse"><a href="https://www.termsfeed.com/live/9ee06b05-aaba-4064-94d1-0a5cd74dec1b">Terms Of Use</a></div>
+            <div><a href="https://docs.google.com/document/d/18oqyVBkG2QQRPcZUeyMIYi-ciqXOQBNTsTfLkq32voU/edit?usp=sharing">Credits</a></div>
             <div id="footerEmailSignUp">
                 <span style="font-weight: 600; margin: 3.5px 10px 0px; font-size: 16px;">Join Our Mailing Service:</span><input type="email" name="footerMail" placeholder="example@gmail.com">
                 <div>Sign Up</div>
