--- a/gala.html
+++ b/gala.html
@@ -20,7 +20,7 @@
                 <div onmouseenter="navHoverOn(this)" onmouseleave="navHoverOff()"><a href="events.html">Events</a></div>
                 <div onmouseenter="navHoverOn(this)" onmouseleave="navHoverOff()"><a href="Info.html">Info</a></div>
                 <div onmouseenter="navHoverOn(this)" onmouseleave="navHoverOff()"><a href="https://www.paypal.com/pools/c/92IuVe91uZ" target="_blank">Donate</a></div>
-                <div id="currentlyOn"><a href="gala.html">Register For Gala</a></div>
+                <div id="currentlyOn"><a href="gala.html">Gala</a></div>
             </div>
         </div>
         <div id="smallNav">
