--- a/gala.html
+++ b/gala.html
@@ -634,7 +634,7 @@
         </div>
         <div id="privacyPolicy"><a href="https://www.privacy-policy-template.com/live.php?token=Mdt6Ss2JCzKFmPioBefR30JBwCVCEpJD">Privacy Policy</a></div>
         <div id="termsOfUse"><a href="https://www.termsfeed.com/live/9ee06b05-aaba-4064-94d1-0a5cd74dec1b">Terms Of Use</a></div>
-        <div><a href="https://docs.google.com/document/d/18oqyVBkG2QQRPcZUeyMIYi-ciqXOQBNTsTfLkq32voU/edit?usp=sharing">Credits</a></div>
+        <div id="footerSources"><a href="https://docs.google.com/document/d/18oqyVBkG2QQRPcZUeyMIYi-ciqXOQBNTsTfLkq32voU/edit?usp=sharing">Credits</a></div>
         <div id="footerEmailSignUp">
             <span style="font-weight: 600; margin: 3.5px 10px 0px; font-size: 16px;">Join Our Mailing Service:</span><input type="email" name="footerMail" placeholder="example@gmail.com">
             <div>Register</div>
