--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
                 <p>Sat Closed</p>
                 <p>Sun Closed</p>
             </div>
-            <p>The office is closed during the lunch hour from 12p-1p.</p>
+            <p>The office is closed during the lunch hour from 12pm-1pm.</p>
             
         </div>
         <div id="sect7Map">
