--- a/index.html
+++ b/index.html
@@ -648,14 +648,14 @@
         <div id="sect5TopEventsContainer">
             <!-- modle event ****-->
             <div class="sect5TopEvents">
-                <div class="sect5TopEventsDate">Saturday <br> April 20th, <br> 2024</div>
+                <div class="sect5TopEventsDate">Saturday <br> July 20th, <br> 2024</div>
                 <div class="sect5TopEventsDiscription">
                     <div class="sect5TopEventsHeader">Monthly Yard Sale</div>
                     <div class="sect5TopEventsInfo">Find all sorts of items, both second hand and brand new</div>
                 </div>
                 <div class="sect5TopEventsTimeAnPlace">
-                    <div class="sect5TopEventsTime">8:30am - 11:30pm</div>
-                    <div class="sect5TopEventsPlace">500th W Harper Rd</div>
+                    <div class="sect5TopEventsTime">8:30am - 11:30am</div>
+                    <div class="sect5TopEventsPlace">500 W Harper Rd</div>
                 </div>
                 <div class="smallScreenSect5TopEventsInfo">
                     <div class="plusEventInfoSect5" onclick="smallEventDiscriptionClick(event)"><div class="plusSignSect5"></div>Event Info <span style="position: relative; top: -2px; margin-left: 10px; font-weight: 500; font-size: 17px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(7, 119, 211); pointer-events: none;"> v</span><div class="eventInfoSect5Line"></div></div>
@@ -664,14 +664,14 @@
             </div>
             <!-- modle event end ****-->
             <div class="sect5TopEvents">
-                <div class="sect5TopEventsDate">Saturday <br> May 18th, <br> 2024</div>
+                <div class="sect5TopEventsDate">Saturday <br> August 17th, <br> 2024</div>
                 <div class="sect5TopEventsDiscription">
                     <div class="sect5TopEventsHeader">Monthly Yard Sale</div>
                     <div class="sect5TopEventsInfo">Find all sorts of items, both second hand and brand new</div>
                 </div>
                 <div class="sect5TopEventsTimeAnPlace">
                     <div class="sect5TopEventsTime">8:30am - 11:30pm</div>
-                    <div class="sect5TopEventsPlace">500th W Harper Rd</div>
+                    <div class="sect5TopEventsPlace">500 W Harper Rd</div>
                 </div>
                 <div class="smallScreenSect5TopEventsInfo">
                     <div class="plusEventInfoSect5" onclick="smallEventDiscriptionClick(event)"><div class="plusSignSect5"></div>Event Info <span style="position: relative; top: -2px; margin-left: 10px; font-weight: 500; font-size: 17px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(7, 119, 211);"> v</span><div class="eventInfoSect5Line"></div></div>
@@ -679,14 +679,14 @@
                 </div>
             </div>
             <div class="sect5TopEvents">
-                <div class="sect5TopEventsDate">Saturday <br> June 15th, <br> 2024</div>
+                <div class="sect5TopEventsDate">Saturday <br> September 21st, <br> 2024</div>
                 <div class="sect5TopEventsDiscription">
                     <div class="sect5TopEventsHeader">Monthly Yard Sale</div>
                     <div class="sect5TopEventsInfo">Find all sorts of items, both second hand and brand new</div>
                 </div>
                 <div class="sect5TopEventsTimeAnPlace">
-                    <div class="sect5TopEventsTime">8:30am - 11:30pm</div>
-                    <div class="sect5TopEventsPlace">500th W Harper Rd</div>
+                    <div class="sect5TopEventsTime">8:30am - 11:30am</div>
+                    <div class="sect5TopEventsPlace">500 W Harper Rd</div>
                 </div>
                 <div class="smallScreenSect5TopEventsInfo">
                     <div class="plusEventInfoSect5" onclick="smallEventDiscriptionClick(event)"><div class="plusSignSect5"></div>Event Info <span style="position: relative; top: -2px; margin-left: 10px; font-weight: 500; font-size: 17px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: rgb(7, 119, 211);"> v</span><div class="eventInfoSect5Line"></div></div>
