--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                 <p>The food service program will supply emergency food boxes for up to 3 ~ 5 days.</p>
             </div>
             <a href="https://www.paypal.com/pools/c/92IuVe91uZ" target="_blank"><div class="Sect3BT" style="transform: translateX(-50%) translateY(-70%);">Donate</div></a>
-            <a href="Info.html#getHelpHeader"><div class="Sect3BTHelp" style="transform: translateX(-50%) translateY(70%);">Get Help</div></a>
+            <a href="index.html#sect7Info"><div class="Sect3BTHelp" style="transform: translateX(-50%) translateY(70%);">Contacts</div></a>
         </div>
 
     </div>
