--- a/gala.html
+++ b/gala.html
@@ -259,7 +259,7 @@
             <!-- background end -->
 
             <span class="appearWhen">
-                <h1>Make a <span style="text-decoration: underline;">Difference</span>:</h1>
+                <h1>Make a <span style="font-style: italic;">Difference</span>:</h1>
                 <p>Your attendance directly supports our mission of providing shelter, care, and hope to those in times of need.</p>
             </span>
         </div>
@@ -324,7 +324,7 @@
 
             <span class="appearWhen">
                 <div id="sect3MiniSect2Text">
-                    <h1>Experience <span style="text-decoration: underline;">Inspiring</span> Stories:</h1>
+                    <h1>Experience <span style=" font-style: italic;">Inspiring</span> Stories:</h1>
                     <p>Hear firsthand accounts of transformation and resilience, highlighting the impact of Agape House's programs and services.</p>
                 </div>
             </span>
@@ -403,7 +403,7 @@
             <!-- background end -->
 
             <span class="appearWhen">
-                <h1 lang="en">Participate in <span style="text-decoration: underline;">Fundrais&shy;ing</span>:</h1>
+                <h1 lang="en">Participate in <span style="font-style: italic;">Fundrais&shy;ing</span>:</h1>
                 <p>Participate in auctions, raffles, and other fundraising activities to contribute further to our cause and win exciting prizes.</p>
             </span>
 
@@ -474,7 +474,7 @@
             <!-- background end -->
             <span class="appearWhen">
                 <div id="sect3MiniSect4Text">
-                    <h1>Enjoy <span style="text-decoration: underline;">Live</span> Enter&shy;tainment:</h1>
+                    <h1>Enjoy <span style=" font-style: italic;">Live</span> Enter&shy;tainment:</h1>
                     <p>Enjoy an evening of live music, performances, and entertainment, adding a touch of excitement to your experience.</p>
                 </div>
             </span>
@@ -542,7 +542,7 @@
 
             <!-- background end -->
             <span class="appearWhen">
-                <h1 lang="en"><span style="text-decoration:underline">Network</span>:</h1>
+                <h1 lang="en"><span style="font-style: italic;">Network</span>:</h1>
                 <p>Connect with like-minded individuals and organizations dedicated to creating positive change in the community.</p>
             </span>
 
@@ -607,7 +607,7 @@
 
             <span class="appearWhen">
                 <div id="sect3MiniSect6Text">
-                    <h1>Build a <span style="text-decoration: underline">Community</span>:</h1>
+                    <h1>Build a <span style="font-style: italic;">Community</span>:</h1>
                     <p>Join together with others who share a passion for helping those in need, fostering a sense of unity and solidarity within the community.</p>
                 </div>
             </span>
