--- a/events.html
+++ b/events.html
@@ -114,7 +114,7 @@
                             <div id="agapeGalaImage6"></div>
                         </div>
                     </div>
-                    <p>Agape House is hosting a gala on May 3rd<br> Come down and support your community!</p>
+                    <p>Agape House is hosting a gala on July 13th<br> Come down and support your community!</p>
                 </div>
             </div>
         </div>
