--- a/index.html
+++ b/index.html
@@ -628,8 +628,7 @@
     <div id="section4">
         <div id="sect4TextAndStuff">
             <h1>Join Our Gala</h1>
-            <p> Experience an evening of compassion and celebration at Agape House's annual Gala. Support our mission and enjoy inspiring stories, live entertainment, and the chance to <span class="sect4Highlight">make a meaningful difference.</span> Mark your calendars and join us for a night of impact. Together, we can transform lives and build a brighter future.</p>
-            
+            <p> Experience an evening of <span class="sect4Highlight">compassion</span> and celebration at Agape House's annual Gala. Support our mission and enjoy <span class="sect4Highlight">inspiring</span> stories, live entertainment, and the chance to make a <span class="sect4Highlight">meaningful difference</span>. Mark your calendars and join us for a night of <span class="sect4Highlight">impact</span>. Together, we can transform lives and build a <span class="sect4Highlight">brighter future</span>.</p>
             <div id="sect4BTContainer">
                 <a href="gala.html#section2"><div id="sect4SignUpBT">Sign Up</div></a>
                 <a href="https://maps.app.goo.gl/cWxVT3K7rWGmgiF5A" target="_blank"><div id="sect4DirectionBT">Directions</div></a>
